# Nuke

./: .gitignore  Build-MSIX.ps1  Cargo.toml  Create-Cert.ps1  LICENSE  README.md  build.rs  dist-workspace.toml
.github/workflows/: msix-release.yml  release.yml
msix_assets/: AppxManifest.xml
src/: main.rs
ui/: app.vue  nuxt.config.ts  package-lock.json  package.json
wix/: main.wxs
