[package]
name = "Nuke"
version = "0.1.0"
edition = "2024"
authors = ["AnarchByte"]
description = "Nuke"
repository = "https://github.com/AnarchByte/Nuke"

[package.metadata.wix]
upgrade-guid = "BB03A8CB-D147-4A0C-9193-D397DBF24DFD"
path-guid = "2F36CCD6-F711-4D98-90A9-B1D41FC73B01"
license = false
eula = false

[[bin]]
name = "Nuke"
path = "src/main.rs"

[dependencies]
wry = "0.47"
tao = "0.30"
include_dir = { version = "0.7", features = ["glob"] }
axoupdater = "0.10"
mime_guess = "2.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"

[build-dependencies]
winres = "0.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
