[package]
name = "Nuke"
version = "0.5.1"
edition = "2024"
authors = ["AnarchByte"]
description = "Nuke"
repository = "https://github.com/AnarchByte/Nuke"

[[bin]]
name = "Nuke"
path = "src/main.rs"

[dependencies]
wry = "0.47"
tao = "0.30"
include_dir = { version = "0.7", features = ["glob"] }
axoupdater = "0.10"
mime_guess = "2.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"

[build-dependencies]
winres = "0.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.packager]
product_name = "Nuke"
identifier = "com.anarchbyte.nuke"
version = "0.5.1"
publisher = "AnarchByte"
copyright = "Copyright (c) 2026 AnarchByte"
description = "Nuke Desktop Application"
homepage = "https://github.com/AnarchByte/Nuke"
# Packager expects an array of formats at the top level or per-platform
formats = ["nsis", "wix", "deb", "dmg"]
out_dir = "target/release/bundle"


[package.metadata.packager.windows]
# Removed nested formats to avoid deserialization error
# Packager will use the top-level formats filtered by platform availability
# You can also add icons here if needed
# icons = ["app-icon.ico"]
